--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ python: 2.7
 before_install:
     - sudo apt-get install libjpeg8-dev
 install:
+    - pip install cffi
     - pip install -e .
 env:
     - TOX_ENV=py26
