--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: python
 before_install:
     - sudo apt-get install libjpeg8-dev
-    - sudo pip install tox cffi
+    - pip install tox cffi
 env:
     - TOX_ENV=py26
     - TOX_ENV=py27
     - TOX_ENV=py33
     - TOX_ENV=pypy
-
 script:
     - tox -e $TOX_ENV
