--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: python-jpegtran-cffi
+Source: python-jpegtran
 Maintainer: Johannes Baiter <johannes.baiter@gmail.com>
 Section: python
 Priority: optional
@@ -6,22 +6,12 @@ Build-Depends:
  debhelper (>= 9),
  dh-python,
  python-all-dev,
- python3-all-dev,
  python-setuptools,
- python3-setuptools,
  python-cffi (>= 0.8),
- python3-cffi (>= 0.8),
  libjpeg8-dev,
- python-pytest,
- python3-pytest,
 Standards-Version: 3.9.5
 
-Package: python-jpegtran-cffi
-Architecture: any
-Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}
-Description: Extremly fast, (mostly) lossless JPEG transformations
-
-Package: python3-jpegtran-cffi
+Package: python-jpegtran
 Architecture: any
 Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}
 Description: Extremly fast, (mostly) lossless JPEG transformations
