--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,10 @@
 #!/usr/bin/make -f
 
 export PYBUILD_NAME=jpegtran-cffi
-export PYBUILD_TEST_PYTEST=1
-export PYBUILD_TEST_ARGS={dir}/test/
 
 
 %:
-	dh $@ --with python2,python3 --buildsystem=pybuild
+	dh $@ --with python2 --buildsystem=pybuild
 
 override_dh_auto_clean:
 	dh_auto_clean
