--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
+sudo: false
 language: python
-before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install libjpeg-turbo8-dev libturbojpeg
-    - pip install tox
-env:
-    - TOX_ENV=py26
-    - TOX_ENV=py27
-    - TOX_ENV=py33
-    - TOX_ENV=py34
-    - TOX_ENV=py35
-    - TOX_ENV=pypy
-script:
-    - tox -e $TOX_ENV
+addons:
+    apt:
+        packages:
+            - libjpeg-turbo8-deva
+            - libturbojpeg
+python:
+    - "2.6"
+    - "2.7"
+    - "3.3"
+    - "3.4"
+    - "3.5"
+install: pip install tox-travis
+script: tox
