Try to fix PyPy tests on Travis

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@
 envlist = py27, py34, py35, pypy
 
 [testenv]
-commands = py.test
+commands =
+    pip install -e .
+    py.test
 deps =
     pytest
     cffi
